--- a/wordweb-app/src/main/resources/view/css/styles.css
+++ b/wordweb-app/src/main/resources/view/css/styles.css
@@ -14256,10 +14256,28 @@ body.hidden-scroll {
     gap: 8px;
   }
   .gap-3 {
-    gap: 16px;
+    gap: 12px;
   }
   .gap-4 {
+    gap: 16px;
+  }
+  .gap-5 {
+    gap: 20px;
+  }
+  .gap-6 {
     gap: 24px;
+  }
+  .gap-7 {
+    gap: 28px;
+  }
+  .gap-8 {
+    gap: 32px;
+  }
+  .gap-9 {
+    gap: 36px;
+  }
+  .gap-10 {
+    gap: 40px;
   }
 }
 .dropdown-menu {
@@ -14719,9 +14737,8 @@ body {
   }
 }
 .simple-search-brand-link {
-  display: inline-flex;
+  display: flex;
   align-items: center;
-  margin: 0 auto;
 }
 .simple-search-brand-link::before {
   width: 32px;
